implement the comment

--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -8,15 +8,48 @@
                 <div class="col-12 p-2">
                     <h1>My files:</h1>
                     {% for upload in uploads %}
-                        <div class="col-lg-4 mb-4">
+                        <div class="col-lg-6 mb-4">
                             <div class="card">
                                 <div class="card-body mb-2">
                                     <h5 class="card-title">{{ upload.file.name }}</h5>
                                     <p class="card-text">Uploaded on: {{ upload.uploaded_at }}</p>
                                     <!--Placeholder for now-->
                                     <p class="card-text">Shared With: "Some people"</p>
+                                    <p class="card-text">Comments: "{{ upload.comments }}"</p>
                                     <a href="{{ upload.file.url }}" class="btn btn-primary me-1 " target="_blank">View PDF</a>
                                     <a class="btn btn-primary me-1" data-bs-toggle="offcanvas" data-bs-target="#sharePDFPopup{{ upload.id }}" aria-controls="sharePDFPopup{{ upload.id }}">Share PDF</a>
+                                    <form method="post" id="commentForm" action="{% url 'outer_comment_views' upload.id %}">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="upload_id" id="uploadIdField">
+                                    <!-- Button trigger modal -->
+                                    <button type="button" class="btn btn-primary comment-button" data-upload-id="{{ upload.id }}" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                        Comment
+                                    </button>
+
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title fs-7" id="exampleModalLabel">Comment</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <div class="form-floating">
+                                                        <label for="inputComments"></label>
+                                                        <textarea class="form-control" id="inputComments" name="comments" style="border-radius: 20px;"></textarea>
+                                                        <label>Descriptions</label>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                    <button type="submit" class="btn btn-primary" onclick="saveComments()">Save changes</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+
                                     <button type="button" id="renameButton_{{ upload.id }}" class="btn btn-primary me-1" onclick="showRenameField(this);">Rename</button>
                                     <form action="{% url 'rename_upload' upload.id %}" method="post" class="rename-form" style="display: none;" data-upload-id="{{ upload.id }}">
                                         {% csrf_token %}
@@ -26,6 +59,7 @@
                                         <button type="button" class="btn btn-primary" onclick="confirmRename(this.parentElement);">Confirm</button>
                                         <button type="button" class="btn btn-secondary" onclick="hideRenameField(this);">Cancel</button>
                                     </form>
+
                                 </div>
                             </div>
                         </div>
@@ -46,7 +80,6 @@
         </div>
     </div>
     {% endfor %}
-
     <script>
         function showRenameField(button) {
             if (button) {
