--- a/tasks/templates/partials/menu.html
+++ b/tasks/templates/partials/menu.html
@@ -1,8 +1,25 @@
+{%load static%}
+{%if user.is_authenticated%}
+{% load notification_tags %}
+{% get_unread_notifications user as notifications %}
+{%endif%}
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-3">
 
     <li class="nav-item dropdown">
-      <a class="nav-link" href = "#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><span class="bi bi-bell"></span></a>
+      <a class="nav-link" href = "#" onclick="set_notifications_as_read()" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><span class="bi bi-bell">
+          {%if notifications|length > 0%}
+            <span id= "notification-alert" class="position-absolute top-10 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:0.6rem;">
+              {%if notifications|length > 99%}
+                99+
+              {%else%}
+                {{notifications|length}}
+              {%endif%}
+            </span>
+          {%endif%}
+
+      </span></a>
+
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link" href="#" id="user-account-dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -17,3 +34,6 @@
     </li>
   </ul>
 </div>
+
+<!--Javascript to set all notifications to read after the popup is opened-->
+<script src="{% static 'js/set_notifications_read.js'%}"></script>
