--- a/tasks/templates/partials/notifications_bar.html
+++ b/tasks/templates/partials/notifications_bar.html
@@ -39,7 +39,11 @@
           <div class="row g-0">
               <div class="col-md-9 p-2">
                   <h5 class="card-title fs-6">{{notification.notification_message}}</h5>
-                  <a href="{{notification.shared_file_instance.shared_file.file.url}}" class="card-link">{{notification.shared_file_instance.shared_file.file.name}}</a>
+                  {%if user in notification.shared_file_instance.shared_to.all%}
+                    <a href="{{notification.shared_file_instance.shared_file.file.url}}" class="card-link">{{notification.shared_file_instance.shared_file.file.name}}</a>
+                  {%else%}
+                    {{notification.shared_file_instance.shared_file.file.name}}
+                  {%endif%}
               </div>
               <div class="col-md-2 mr-2">
                   <p class="card-text"><small class="text-body-secondary" style="font-size:12px">{{notification.time_of_notification}}</small></p>
