Add upload pdf to team folder

--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -9,11 +9,62 @@
                     <h2>Shared Files in {{ team.name }}:</h2>
                     {% if shared_uploads.count > 0 %}
                         <ul>
-                            {% for upload in shared_uploads %}
-                                <li>
-                                    <a href="{{ upload.file.url }}">upload.file.name</a>
-                                </li>
-                            {% endfor %}
+                        {% for upload in shared_uploads %}
+                        <div class="row mb-4">
+                            <div class="card">
+                                <div class="card-body mb-2">
+                                    <h5 class="card-title">{{ upload.file.name }}</h5>
+                                    <p class="card-text">Uploaded on: {{ upload.uploaded_at }}</p>
+                                    <p class="card-text">Comment: {{ upload.comments}}</p>
+                                    <a href="{{ upload.file.url }}" class="btn btn-primary me-1 " target="_blank">View PDF</a>
+                                    <form method="post" class="d-inline" id="commentForm" action="{% url 'outer_comment_views' upload.id %}">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="upload_id" id="uploadIdField">
+                                        <!-- Button trigger modal -->
+                                        <button type="button" class="btn btn-primary comment-button" data-upload-id="{{ upload.id }}" data-bs-toggle="modal" data-bs-target="#exampleModal{{ upload.id }}">
+                                            Comment
+                                        </button>
+                    
+                                        <!-- Modal -->
+                                        <div class="modal fade" id="exampleModal{{ upload.id }}" tabindex="-1" aria-labelledby="exampleModalLabel{{ upload.id }}" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title fs-7" id="exampleModalLabel{{ upload.id }}">Comment</h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <div class="form-floating">
+                                                            <label for="inputComments"></label>
+                                                            <textarea class="form-control" id="inputComments" name="comments" style="border-radius: 20px;"></textarea>
+                                                            <label>Descriptions</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="submit" class="btn btn-primary">Save changes</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <!--Delete PDF-->
+                                    <form action="{% url 'delete_upload' upload.id %}" method="post" class="d-inline">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-danger"><i class="bi bi-trash-fill"></i>Delete</button>
+                                    </form>
+                                    <button type="button" id="renameButton_{{ upload.id }}" class="btn btn-primary me-1" onclick="showRenameField(this);">Rename</button>
+                                    <form action="{% url 'rename_upload' upload.id %}" method="post" class="rename-form" style="display: none;" data-upload-id="{{ upload.id }}">
+                                        {% csrf_token %}
+                                        <label>
+                                            <input type="text" name="new_name" placeholder="New file name" required>
+                                        </label>
+                                        <button type="button" class="btn btn-primary" onclick="confirmRename(this.parentElement);">Confirm</button>
+                                        <button type="button" class="btn btn-secondary" onclick="hideRenameField(this);">Cancel</button>
+                                    </form>
+                                 </div>
+                            </div>
+                        </div>      
+                        {% endfor %}
                         </ul>
                     {% else %}
                         <p style="margin-left: 30px">There is no shared files so far</p>
@@ -43,7 +94,7 @@
                         </div>
 
                         <div class="col-5" style="margin-left: -20px">
-                            <a class="btn btn-primary mt-2" href="#" style="margin-left: 15px">Share File</a>
+                            <a class="btn btn-primary me-1" data-bs-toggle="offcanvas" data-bs-target="#uploadTeamPdf" aria-controls="uploadTeamPdf">Upload to Team Folder</a>      
                         </div>
                     </div>
                 </div>
@@ -63,5 +114,16 @@
             </div>
         </div>
     </div>
+
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="uploadTeamPdf" aria-labelledby="uploadTeamPdf">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title">Upload PDF to Team {{team.name}}</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            {% include 'partials/upload_file_popup.html' with form=upload_form team_id=team.id %}
+        </div>
+    </div>
+
     <script src="{% static 'js/popup_window_invite.js' %}"></script>
 {% endblock %}
